css/estilos.css
body {
	font-family: 'Lato', sans-serif;
}

.quitar-float {
	float: none;
}

.espacio-arriba {
    margin-top: 6em;
}

.pacifico {
    font-family: 'Pacifico', cursive;
}

.lato {
    font-family: 'Lato', sans-serif;
}

.muy-grande {
    font-size: 6em;
}

.muy-grande-m {
    font-size: 4em;
}

.grande {
    font-size: 4em; 
}

.grande-m {
    font-size: 4em; 
}

.inline-block {
	float: none;
	display: inline-block;
	margin-right: -4px;
}

.retrasar-p5s {
    -webkit-animation-delay: 0.5s;
	-moz-animation-delay: 0.5s;
	animation-delay: 0.5s;
}

.retrasar-1s {
    -webkit-animation-delay: 1s;
	-moz-animation-delay: 1s;
	animation-delay: 1s;
}

.retrasar-1p5s {
    -webkit-animation-delay: 1.5s;
	-moz-animation-delay: 1.5s;
	animation-delay: 1.5s;
}

.retrasar-2s {
    -webkit-animation-delay: 2s;
	-moz-animation-delay: 2s;
	animation-delay: 2s;
}

.ten-sombra-interna {
-webkit-box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
-moz-box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
box-shadow: inset 0px 32px 42px -28px rgba(0,0,0,0.75);
}

.padding-largo {
    padding: 10px 18px;
}

.navegacion a {
    color: #FFFFFF;
    font-size: 1em;
    font-style: normal;
    font-weight: bold;
    letter-spacing: 0.5px;
    line-height: -1;
}

.navegacion a:hover {
    text-decoration: none;
}

#navegacion ul li a {
    color: #FFFFFF;
    font-size: 1em;
    font-style: normal;
    font-weight: bold;
    letter-spacing: 0.5px;
    line-height: -1;
}

#navegacion ul li a:hover {
    text-decoration: none;
}

.a-la-izquierda {
    float: left;
}

.a-la-derecha {
    float: right;
}

.espacio-derecha {
    margin-right: 16px;
}

.margen-icon {
    margin-right: 4px;
}

.menu {
    height: 50px;
    z-index: 99;
}

.main {
    background-color: #444C5C;
    color: #FFFFFF;
    float: none;
    margin-top: -134px;
    z-index: -99;
    padding: 0;
    top 0;
    height: 100vh;
}

.main-m {
    background-color: #444C5C;
    /*background-image: url("../imgs/bg.jpg");*/
    color: #FFFFFF;
    float: none;
    margin-top: -134px;
    z-index: -99;
    padding: 0;
    top 0;
    height: 100%;
}

.ten-imagen-fondo {
    background: url(../imgs/bg.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.sin-espacio-arriba {
    margin-top: -4px;
}

.margen-arriba {
    margin-top: 48px;
}

.margen-compensador {
    padding-top: 2em;
}

.margen-compensador-m {
    padding-top: 1em;
}

.margen-titulo {
    padding-top: 1em;
}

.margen-titulo-m {
    padding-top: 0.5em;
    margin-bottom: 0.5em;
}

.margen-interlineado {
    margin-top: 1em;
    margin-bottom: 2em;
}

.margen-correo {
    margin-left: 7.2%;
}

.img-centro {
    margin: 0 auto;
    margin-bottom: 28px;
}

#Tecnologia {
    font-size: 1.2em;
}

.separador {
    height: 48px;
}

.avatar {
    border: 2px solid #FFFFFF;
	box-shadow: 0px 0px 4px #000000;
}

.personas-container {
    padding-top: 0px;
}

/*****************************
 * MOBILE MENU
 ****************************/
#mobile-nav {
    background-color: transparent;
    position: absolute;
    z-index: 99999;
    width: 100%;
    margin-bottom: 0;
    border: none;
}

#mobile-nav button {
    border: 1px solid #FFF;
}

#mobile-nav button:enabled {
    background-color: transparent;
}

#mobile-nav button:hover {
    background-color: #2F3542;
}

.mobile-header {
    border: none;
}

.mobile-header a {
    font-size: 36px;
    padding: 12px 18px;
    background-color: transparent;
    color: #FFFFFF;
}

#myNavbar {
    background-color: #444C5C;
    border: 1px solid #2F3542;
}

#myNavbar a {
    color: #FFFFFF;
}

#myNavbar ul li a:hover {
	background-color: #2F3542;
    color: #FFFFFF;
}

#header-gc ul li a .activo {
	color: #FFFFFF;
	background-color: #2F3542;
}

#myNavbar ul li a#activo {
	color: #FFFFFF;
    background-color: #2F3542;
}

.se-azul {
    color: #029BE8;
}

.sin-decoracion {
    text-decoration: none;
}

.sin-decoracion:hover {
    text-decoration: none;
}

.brillar-en-azul:hover {
    color: #00A9FF;
}

.justificado {
    text-align: justify;
}

/*
 * PERFILES
 */
.juan {
    
}

.jonny {
    
}

.buy a {
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
    color: #fff;
    background-color: #45D363;
    background-image: linear-gradient( to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.05) );
    background-image: -ms-linear-gradient( to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.05) );
    background-image: -o-linear-gradient( to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.05) );
    background-image: -webkit-linear-gradient( to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.05) );
    background-image: -moz-linear-gradient( to bottom, rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.05) );
    border-radius: 3px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    padding: 12px;
    text-align: center;
    transition: all 100ms ease-in-out;
    text-decoration: none;
    font-size: 16px;
}

.buy a:hover {
     background-image: linear-gradient( to bottom, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.05) );
}

/*
 * PIE DE PAGINA
 */
#pie {
    margin-top: 50px;
    background-color: #f2f2f2;
    color: #777;
    padding: 20px 8px 15px 8px;
    font-size: 16px;
    text-align: center;
    width: 100%;
    border-top: 1px solid #D3D3D3;
}

